# fastapi-project-structure

./: .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  logging.yaml  pyproject.toml  requirements.txt  sql_tables.sql  webapp.db
alembic/: env.py
alembic/versions/: 2024-04-28-22-24_4345d93b9cf6.py  dbba606a04de_initial_migration.py
app/: config.py  constants.py  containers.py  database.py  exception_handlers.py  exceptions.py  main.py  schemas.py
app/auth/: dependencies.py  router.py  schemas.py  service.py
app/core/: security.py
app/modules/posts/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/tags/: models.py  repository.py  router.py  schemas.py  service.py
app/services/: filesystem.py  mailer.py
app/users/: models.py  repository.py  router.py  schemas.py  service.py
scripts/: format.sh  start_dev.sh
tests/unit_test/: conftest.py
tests/unit_test/modules/posts/: test_repository.py  test_router.py  test_service.py
